formulas not compiled

--- a/_posts/2021-01-10-cv-books.md
+++ b/_posts/2021-01-10-cv-books.md
@@ -1,11 +1,11 @@
 ---
-title:  有关立体视觉的好文、好书
-tags: CV
+title:  以阅读书籍和论文的方式获取计算机视觉知识
+tags: 阅读学习 计算机视觉
 ---
 
-# 问题描述
-最近想看一些计算机视觉尤其立体视觉（几何视觉）的书，找到了以下好文，记录一下。
-# 列表
-* [经典书籍汇总](https://www.zhihu.com/question/28813777)
-* [神奇网站](http://www.visionbib.com/bibliography/contents.html)
-* [SFM 和 vSLAM](https://www.cnblogs.com/yhlx125/p/8719194.html)
+* [CV 经典书籍汇总](https://www.zhihu.com/question/28813777)：
+    1. *Computer Vision: Models, Learning, and Inference*
+    2. *Computer Vision: Algorithms and Applications*
+    3. \[3DV\]*Multiple View Geometry in Computer Vision*
+    4. \[3DV\]*An Invitation to 3-D Vision*
+* [神奇网站](http://www.visionbib.com/bibliography/contents.html)：这个神奇网站一直对 CV 文献进行着收集和多维度分类，可以按 topic 查看、按会议查看等等，非常适合入门某一个 topic 时顺着它的历史沿革深入理解；
